@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2008-09-XX  Release 7.13.0                                     ---
 ----------------------------------------------------------------------
 
+* mged 'edcolor' command turns into 'color -e' - Sean Morrison
 * nirt dest command now avoids overwriting existing files - Cliff Yapp
 * fixed mged_players error on tra in classic mode mged  - Bob Parker
 * fix attr behavior when setting the region attribute - C. Yapp
